# rchezz

./: .gitignore  .prettierignore  .prettierrc  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.ts  wazza.ts
wasm/: Cargo.toml  clippy.toml  rustfmt.toml
wasm/src/: error.rs  io.rs  lib.rs  macros.rs
wasm/src/game/: board.rs
