[package]
name = "rchess"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0.15"
wasm-bindgen = "0.2.100"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["io-std", "macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
path = "src/main.rs"
name = "mycrate"
