[package]
name = "rchess"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["io-std", "macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"
web-sys = { version = "0.3.77", features = ["Event", "EventTarget", "WorkerGlobalScope", "CustomEvent"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
path = "src/main.rs"
name = "mycrate"
